# Axpo_assignment

./: README.md  extract.py  extractors.py  main.py  transform.py  utils.py
etl_tool/: etl  pyproject.toml  requirements.txt  setup.py
etl_tool/src/: extract.py  extractors.py  load.py  loaders.py  main.py  transform.py  transformers.py
etl_tool/tests/: test_date.py  test_extractors.py  test_loaders.py  test_transformers.py
src/: loaders.py  main.py  transformers.py
tests/: test_date.py
